--- a/html/welcome.html
+++ b/html/welcome.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>Welcome to Veridian Dynamics!</h1>
+<h1 id="top">Welcome to Veridian Dynamics!</h1>
 
 <p>At Veridian Dynamics, <span style="font-weight: bold">we</span> solve <span style="font-style: italic">your</span> problems with <span style="font-style: italic; font-weight: bold">technology</span></p>
 
@@ -36,5 +36,34 @@
     <li>Increase Business by 30%</li>
 </ul>
 
+<hr>
+
+<h1>Company Vision</h1>
+
+
+<table>
+    <tr>
+        <th>Plan</th>
+        <th>Price</th>
+        <th>Features</th>
+    </tr>
+    <tr>
+        <td>Starter</td>
+        <td>$99</td>
+        <td>Base Technology</td>
+    </tr>
+    <tr>
+        <td>Advance</td>
+        <td>$199</td>
+        <td>Additional Features</td>
+    </tr>
+    <tr>
+        <td>Premium</td>
+        <td>$499</td>
+        <td>Unlimited Support</td>
+    </tr>
+</table>
+
+<a href="#top">Go to top of page</a>
 </body>
 </html>
