--- a/html/welcome.html
+++ b/html/welcome.html
@@ -64,6 +64,8 @@
     </tr>
 </table>
 
+<p>All products come with our quality gaurantee</p>
+
 <a href="#top">Go to top of page</a>
 </body>
 </html>
