complete form page

--- a/html/forms.html
+++ b/html/forms.html
@@ -14,7 +14,25 @@
     <label for="password">Password</label>
     <input id="password" name="password" type="password">
 
-    <textarea name="bio" id="bio" cols="30" rows="10"></textarea>
+    <textarea placeholder="bio..." name="bio" id="bio" cols="30" rows="10"></textarea>
+
+    <section>
+        <h1>How did you hear about us?</h1>
+        billboard <input type="radio" name="hear" value="billboard"><br>
+        radio advertisement <input type="radio" name="hear" value="radio advertisement"><br>
+        internet advertisement <input type="radio" name="hear" value="internet advertisement"><br>
+        other <input type="radio" name="hear" value="other"><br>
+    </section>
+            <h1>What browser are you using</h1>
+            <p>
+                <label>browser</label>
+                <select id = "myList">
+                    <option value = "google">Google</option>
+                    <option value = "Yahoo">Yahoo</option>
+                    <option value = "firefox">Firefox</option>
+                    <option value = "Safari">Safari</option>
+                </select>
+            </p>
 
 
     <button type="submit">Submit Form</button>
