started styling welcome.html and added a css directory

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <title>Welcome</title>
 </head>
+<style>
+    h1{
+        color: red;
+    }
+
+    .fancy-header{
+        color: blue; /* single line comment */
+        text-decoration: underline;
+    }
+</style>
 <body>
 
-<h1 id="top">Welcome to Veridian Dynamics!</h1>
+<h1 id="top" class="fancy-header">Welcome to Veridian Dynamics!</h1>
 
 <p>At Veridian Dynamics, <span style="font-weight: bold">we</span> solve <span style="font-style: italic">your</span> problems with <span style="font-style: italic; font-weight: bold">technology</span></p>
 
