added css_selectors.html and selectors.css

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -3,17 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
-<style>
-    h1{
-        color: red;
-    }
-
-    .fancy-header{
-        color: blue; /* single line comment */
-        text-decoration: underline;
-    }
-</style>
 <body>
 
 <h1 id="top" class="fancy-header">Welcome to Veridian Dynamics!</h1>
